libweva/include/weva_c.h

uint32_t weva_abi_version(void);
typedef enum weva_status {
    WEVA_OK = 0,
    WEVA_ERR_INVALID_ARGUMENT = 1,
    WEVA_ERR_PARSE = 2,
    WEVA_ERR_NOT_FOUND = 3,
    WEVA_ERR_UNSUPPORTED = 4,
    WEVA_ERR_INTERNAL = 5,
    WEVA_ERR_INVALID_STATE = 6
} weva_status;
typedef struct weva_document* weva_document_t;
typedef uint32_t weva_element_t;
typedef struct weva_config {
    int viewport_width;
    int viewport_height;
    double device_pixel_ratio;
    double root_font_size;
    int use_user_agent_stylesheet;
} weva_config;
typedef struct weva_vertex {
    float x, y;
    float r, g, b, a;
    float u, v;
} weva_vertex;
typedef struct weva_rounded_rect {
    double x, y, width, height;
    double radii[4][2];
    float r, g, b, a;
} weva_rounded_rect;
typedef struct weva_backdrop_effect {
    double blur_radius;
    float color_matrix[9];
    float color_offset[3];
    float color_alpha;
} weva_backdrop_effect;
typedef struct weva_draw {
    const weva_vertex* vertices;
    size_t vertex_count;
    const uint32_t* indices;
    size_t index_count;
    uint64_t texture_id;
    int32_t scissor_x, scissor_y, scissor_width, scissor_height;
    int32_t has_scissor;
    int32_t kind;
    weva_backdrop_effect backdrop;
    weva_rounded_rect rounded_rect;
    int32_t blend_mode;
} weva_draw;
typedef struct weva_texture {
    uint64_t id;
    const uint8_t* rgba;
    int32_t width, height;
} weva_texture;
typedef struct weva_render_backend {
    void* user_data;
    uint64_t (*compile_geometry)(void* user_data, const weva_vertex* vertices,
                                 size_t vertex_count, const uint32_t* indices,
                                 size_t index_count);
    void (*render_geometry)(void* user_data, uint64_t geometry, float translate_x,
                            float translate_y, uint64_t texture);
    void (*release_geometry)(void* user_data, uint64_t geometry);
    uint64_t (*generate_texture)(void* user_data, const uint8_t* rgba, int32_t width,
                                 int32_t height);
    void (*release_texture)(void* user_data, uint64_t texture);
    uint64_t (*load_texture)(void* user_data, const char* path, int32_t* out_width,
                             int32_t* out_height);
    void (*set_scissor)(void* user_data, int32_t enable, int32_t x, int32_t y, int32_t width,
                        int32_t height);
} weva_render_backend;
typedef struct weva_glyph_bitmap {
    const uint8_t* alpha;
    int32_t width, height;
    const uint8_t* rgba;
} weva_glyph_bitmap;
typedef struct weva_font_backend {
    void* user_data;
    uint64_t (*load_face)(void* user_data, const uint8_t* data, size_t length, int32_t index);
    int32_t (*face_metrics)(void* user_data, uint64_t face, double px, double* out_ascent,
                            double* out_descent, double* out_line_gap);
    int32_t (*glyph_index)(void* user_data, uint64_t face, uint32_t codepoint,
                           uint32_t* out_glyph);
    int32_t (*glyph_metrics)(void* user_data, uint64_t face, uint32_t glyph, double px,
                             double* out_advance, double* out_bearing_x, double* out_bearing_y,
                             int32_t* out_width, int32_t* out_height);
    int32_t (*rasterize)(void* user_data, uint64_t face, uint32_t glyph, double px,
                         weva_glyph_bitmap* out);
    size_t (*shape)(void* user_data, uint64_t face, const char* utf8, size_t length, double px,
                    uint32_t* out_glyphs, double* out_advances, uint32_t* out_clusters,
                    size_t capacity);
    uint64_t (*variant)(void* user_data, uint64_t face, int32_t weight, int32_t italic);
} weva_font_backend;
typedef struct weva_shaped_glyph {
    uint32_t glyph, cluster;
    double x_advance, y_advance;
    double x_offset, y_offset;
} weva_shaped_glyph;
typedef size_t (*weva_shape_glyphs_fn)(void* user_data, uint64_t face, const char* utf8,
                                    size_t length, double px, weva_shaped_glyph* out,
                                    size_t capacity);
void weva_document_set_render_backend(weva_document_t doc, const weva_render_backend* backend);
void weva_document_set_font_backend(weva_document_t doc, const weva_font_backend* backend,
                                    uint64_t face);
weva_status weva_document_set_font_shaper(weva_document_t doc, weva_shape_glyphs_fn shape);
void weva_document_set_font_leading_rounding(weva_document_t doc, int rounds);
weva_status weva_document_register_font_family(weva_document_t doc, const char* family,
                                               uint64_t face);
weva_document_t weva_document_create(const weva_config* config);
void weva_document_destroy(weva_document_t doc);
weva_status weva_document_load_html(weva_document_t doc, const char* html, size_t length);
weva_status weva_document_add_css(weva_document_t doc, const char* css, size_t length);
weva_status weva_document_set_css(weva_document_t doc, const char* css, size_t length);
weva_status weva_document_reload_html(weva_document_t doc, const char* html, size_t length);
void weva_document_set_viewport(weva_document_t doc, int width, int height);
void weva_document_set_color_scheme(weva_document_t doc, int dark);
void weva_document_set_safe_area_insets(weva_document_t doc, double top, double right,
                                        double bottom, double left);
weva_status weva_document_content_size(weva_document_t doc, double* out_width,
                                       double* out_height);
weva_status weva_document_update(weva_document_t doc, double dt_seconds);
weva_status weva_document_update_geometry(weva_document_t doc);
weva_status weva_document_update_with_input_time(weva_document_t doc,
                                                double animation_seconds, double input_seconds);
int weva_document_needs_input_tick(weva_document_t doc);
uint64_t weva_document_draw_serial(weva_document_t doc);
uint64_t weva_document_interaction_version(weva_document_t doc);
int weva_document_is_animating(weva_document_t doc);
const weva_draw* weva_document_draws(weva_document_t doc, size_t* out_count);
const uint64_t* weva_document_draw_versions(weva_document_t doc, size_t* out_count);
const weva_texture* weva_document_textures(weva_document_t doc, size_t* out_count);
weva_element_t weva_document_query(weva_document_t doc, const char* selector);
weva_status weva_element_bounds(weva_document_t doc, weva_element_t element, double* out_x,
                                double* out_y, double* out_width, double* out_height);
typedef struct weva_event {
    int32_t kind;              
    weva_element_t target;     
    double x, y;               
    uint32_t buttons;          
    int32_t key;               
    uint32_t modifiers;        
    char text[8];
    char handler[48];
} weva_event;
int weva_document_poll_event(weva_document_t doc, weva_event* out);
size_t weva_document_event_text(weva_document_t doc, char* buffer, size_t capacity);
int weva_element_contains(weva_document_t doc, weva_element_t ancestor,
                          weva_element_t descendant);
weva_element_t weva_document_element_at(weva_document_t doc, double x, double y);
size_t weva_document_cursor(weva_document_t doc, char* buffer, size_t capacity);
size_t weva_document_cursor_at(weva_document_t doc, double x, double y, char* buffer,
                               size_t capacity);
weva_element_t weva_document_element_at_devtools(weva_document_t doc, double x, double y);
typedef struct weva_stats {
    double update_ms;
    double cascade_ms, animate_ms, boxes_ms, layout_ms, paint_ms;
    uint64_t updates;                 
    uint32_t elements;                
    uint32_t boxes;                   
    uint32_t draws;                   
    uint32_t textures;                
    uint32_t texture_cache_hits, texture_cache_misses;
    uint64_t cascade_elements, cascade_pseudos;   
} weva_stats;
void weva_document_stats(weva_document_t doc, weva_stats* out);
typedef struct weva_box {
    uint32_t parent;                 
    uint32_t kind;                   
    weva_element_t element;          
    double x, y, width, height;
    double margin_top, margin_right, margin_bottom, margin_left;
    double border_top, border_right, border_bottom, border_left;
    double padding_top, padding_right, padding_bottom, padding_left;
    double scroll_x, scroll_y;
    const char* text;
    size_t text_length;
} weva_box;
size_t weva_document_boxes(weva_document_t doc, weva_box* out, size_t capacity);
int weva_document_accepts_pointer(weva_document_t doc, double x, double y);
uint64_t weva_document_transient_version(weva_document_t doc);
int weva_document_dismiss_transients(weva_document_t doc, uint64_t version);
void weva_document_set_pointer(weva_document_t doc, double x, double y, uint32_t buttons);
void weva_document_set_pointer_modifiers(weva_document_t doc, double x, double y,
                                         uint32_t buttons, uint32_t modifiers);
void weva_document_clear_pointer(weva_document_t doc);
int weva_document_key(weva_document_t doc, int key, uint32_t modifiers, int down);
void weva_document_text_input(weva_document_t doc, const char* utf8);
int weva_document_try_text_input(weva_document_t doc, const char* utf8);
int weva_document_try_text_input_modifiers(weva_document_t doc, const char* utf8, uint32_t modifiers);
int weva_document_paste_text(weva_document_t doc, const char* utf8);
weva_element_t weva_document_text_input_target(weva_document_t doc);
weva_element_t weva_document_text_input_candidate(weva_document_t doc);
int weva_document_set_composition(weva_document_t doc, const char* utf8, int start, int end);
int weva_document_commit_composition(weva_document_t doc, const char* utf8);
weva_element_t weva_document_composition(weva_document_t doc, int* start, int* end);
int weva_document_caret_bounds(weva_document_t doc, double* x, double* y,
                               double* width, double* height);
weva_element_t weva_document_focus_next(weva_document_t doc, int backwards);
weva_element_t weva_document_focus_step(weva_document_t doc, int backwards, int wrap);
weva_element_t weva_document_focus_move(weva_document_t doc, double dx, double dy);
weva_status weva_document_set_focus(weva_document_t doc, weva_element_t element);
weva_element_t weva_document_focus(weva_document_t doc);
void weva_document_set_tooltip_delay(weva_document_t doc, double seconds);
void weva_document_set_key_repeat(weva_document_t doc, double delay_seconds,
                                  double interval_seconds);
void weva_document_set_double_click(weva_document_t doc, double window_seconds,
                                    double distance_px);
int weva_document_open_select(weva_document_t doc, weva_element_t element);
weva_element_t weva_document_open_select_element(weva_document_t doc);
int weva_document_select_word_at(weva_document_t doc, double x, double y);
int weva_document_select_all(weva_document_t doc);
int weva_document_undo(weva_document_t doc);
int weva_document_redo(weva_document_t doc);