Packages/com.wevaui/Runtime/Native/WevaNative.g.cs


        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_abi_version();
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_render_backend(System.IntPtr doc, weva_render_backend* backend);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_font_backend(System.IntPtr doc, weva_font_backend* backend, ulong face);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_set_font_shaper(System.IntPtr doc, delegate* unmanaged[Cdecl]<void*, ulong, byte*, nuint, double, weva_shaped_glyph*, nuint, nuint> shape);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_font_leading_rounding(System.IntPtr doc, int rounds);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_register_font_family(System.IntPtr doc, byte* family, ulong face);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern System.IntPtr weva_document_create(weva_config* config);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_destroy(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_load_html(System.IntPtr doc, byte* html, nuint length);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_add_css(System.IntPtr doc, byte* css, nuint length);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_set_css(System.IntPtr doc, byte* css, nuint length);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_reload_html(System.IntPtr doc, byte* html, nuint length);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_viewport(System.IntPtr doc, int width, int height);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_color_scheme(System.IntPtr doc, int dark);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_safe_area_insets(System.IntPtr doc, double top, double right, double bottom, double left);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_content_size(System.IntPtr doc, double* out_width, double* out_height);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_update(System.IntPtr doc, double dt_seconds);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_update_geometry(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_update_with_input_time(System.IntPtr doc, double animation_seconds, double input_seconds);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_needs_input_tick(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong weva_document_draw_serial(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong weva_document_interaction_version(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_is_animating(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern weva_draw* weva_document_draws(System.IntPtr doc, nuint* out_count);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong* weva_document_draw_versions(System.IntPtr doc, nuint* out_count);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern weva_texture* weva_document_textures(System.IntPtr doc, nuint* out_count);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_document_query(System.IntPtr doc, byte* selector);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_bounds(System.IntPtr doc, uint element, double* out_x, double* out_y, double* out_width, double* out_height);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_poll_event(System.IntPtr doc, weva_event* @out);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_event_text(System.IntPtr doc, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_contains(System.IntPtr doc, uint ancestor, uint descendant);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_document_element_at(System.IntPtr doc, double x, double y);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_cursor(System.IntPtr doc, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_cursor_at(System.IntPtr doc, double x, double y, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_document_element_at_devtools(System.IntPtr doc, double x, double y);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_stats(System.IntPtr doc, weva_stats* @out);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_boxes(System.IntPtr doc, weva_box* @out, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_accepts_pointer(System.IntPtr doc, double x, double y);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong weva_document_transient_version(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_dismiss_transients(System.IntPtr doc, ulong version);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_pointer(System.IntPtr doc, double x, double y, uint buttons);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_pointer_modifiers(System.IntPtr doc, double x, double y, uint buttons, uint modifiers);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_clear_pointer(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_key(System.IntPtr doc, int key, uint modifiers, int down);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_text_input(System.IntPtr doc, byte* utf8);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_try_text_input(System.IntPtr doc, byte* utf8);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_try_text_input_modifiers(System.IntPtr doc, byte* utf8, uint modifiers);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_paste_text(System.IntPtr doc, byte* utf8);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_document_text_input_target(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_document_text_input_candidate(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_set_composition(System.IntPtr doc, byte* utf8, int start, int end);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_commit_composition(System.IntPtr doc, byte* utf8);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_document_composition(System.IntPtr doc, int* start, int* end);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_caret_bounds(System.IntPtr doc, double* x, double* y, double* width, double* height);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_document_focus_next(System.IntPtr doc, int backwards);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_document_focus_step(System.IntPtr doc, int backwards, int wrap);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_document_focus_move(System.IntPtr doc, double dx, double dy);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_set_focus(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_document_focus(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_tooltip_delay(System.IntPtr doc, double seconds);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_key_repeat(System.IntPtr doc, double delay_seconds, double interval_seconds);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_double_click(System.IntPtr doc, double window_seconds, double distance_px);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_open_select(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_document_open_select_element(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_select_word_at(System.IntPtr doc, double x, double y);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_select_all(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_undo(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_redo(System.IntPtr doc);
